# refref

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: refref.gin  refref_fg.gin  refref_hdr.gin
extensions/: backend.py
extensions/cuda/: setup.py
extensions/cuda/include/bvh/: bounding_box.cuh  bvh.cuh  common.h  gpu_memory.h  raytracer.h  triangle.cuh
extensions/cuda/src/: bindings.cpp  bvh.cu  raytracer.cu
internal/: configs.py  cuda_raytracer.py  data_utils.py  mesh_preprocess.py  models.py  ray_reflection.py  ray_refraction.py  ray_samplers.py  ref_utils.py  render.py  stepfun.py  train_utils.py
r3f_ns/: blender_refref_dataparser.py  blender_refref_dataparser_config.py  r3f_config.py  r3f_model.py  r3f_pipeline.py  refref_dataloaders.py  refref_datamanager.py  refref_dataparser.py  refref_dataparser_config.py  refref_dataset.py
scripts/: eval.sh  eval_metrics.py  evaluate.py  train.sh
